@@ -1,3 +1,9 @@
+2019-05-21  Uroš Bizjak  <ubizjak@gmail.com>
+
+	* config/i386/cpuid.h (__cpuid): For 32bit targets, zero
+	%ebx and %ecx bafore calling cpuid with leaf 1 or
+	non-constant leaf argument.
+
 2019-05-21  Alan Modra  <amodra@gmail.com>
 
 	PR target/90545
